added adjustable dimensions for target_field and scaling throught the code

--- a/basic.css
+++ b/basic.css
@@ -9,6 +9,11 @@
    --highlight: #CC0000;
    --link: #4444BB;
    --link-active: #4400BB;
+   --tou_content_width: 150px;
+   --tou_content_height: 20px;
+   --tou_content_border: 7px;
+   --tou_targetfield_margin: 6px;
+   --tou_targetfield_gap: 8px;
  }
 
  body {
@@ -34,60 +39,59 @@
    border-radius: 3rem;
  }
 
- div.staging {
+ div.tou_layouter {
    padding: 3rem;
    display: grid;
  }
 
- div.resting {
+ div.tou_assembly {
    background: var(--grey4);
    color: var(--white);
    padding: 5rem 5rem 5rem 5rem;
    border: 1px solid var(--white);
  }
 
-div.target_grid {
+div.tou_bench {
    display: grid;
-   grid-row-gap: 0.5rem;
-   grid-column-gap: 0.5rem;
+   grid-row-gap: var(--tou_targetfield_gap);
+   grid-column-gap: var(--tou_targetfield_gap);
    margin: 0;
    padding: 0;
 }
 
-div.dummyBlock {
+div.tou_spaceblock {
    margin: 0;
    padding: 0;
    display: inline-block;
 }
 
- div.grid {
+ div.tou_warehouse {
     background: var(--lightgreen);
     padding: 1rem;
  }
 
- .target_field {
+ .tou_target_field {
     background: var(--black);
-    outline: 1px dashed #FF06B5;
+    outline: 1px dashed var(--grey4);
     outline-offset: -2px;
-    min-height: 45px;
-    min-width: 175px;
+    min-height: calc(var(--tou_targetfield_margin) + var(--tou_content_height) + var(--tou_content_border) * 2);
+    min-width: calc(var(--tou_targetfield_margin) + var(--tou_content_width) + var(--tou_content_border) * 2 );
     display: inline-grid;
  }
 
- .target_field > * {
+ .tou_target_field > * {
     position:relative;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
  }
 
- .outer_box {
+ .tou_containment {
     display: grid;
     grid-gap: 0;
     background: var(--white);
-    grid-gap: 0px;
-    width: 164px;
-    height: 34px;
+    width: calc(var(--tou_content_width) + var(--tou_content_border) * 2 );
+    height: calc(var(--tou_content_height) + var(--tou_content_border) * 2 );
  }
 
  .placeholder {
@@ -95,7 +99,7 @@ div.dummyBlock {
     background: var(--grey2);
  }
 
- .content_box {
+ .tou_content_box {
     display: inline-grid;
     grid-column-start: 2;
     grid-column-end: 2;
@@ -104,104 +108,106 @@ div.dummyBlock {
     user-select: none;
     padding: 0;
     margin: 0;
-    width: 150px;
-    height: 20px;
+    width: var(--tou_content_width);
+    height: var(--tou_content_height);
     cursor: grab;
     z-index: 10;
     overflow: hidden;
     color: var(--black);
  }
 
- .grid .outer_box {
+ .tou_warehouse .tou_containment {
     margin: 5px;
  }
 
-.corner_lt, .corner_rt, .corner_lb, .corner_rb {
-    outline: 1px solid green;
-    outline-offset: -1px;
+.tou_corner_lt, .tou_corner_rt, .tou_corner_lb, .tou_corner_rb {
+    /*outline: 1px solid green;
+    outline-offset: -1px;*/
+    background: var(--grey1);
     display: inline-grid;
-    width: 7px;
-    height: 7px;
+    width: var(--tou_content_border);
+    height: var(--tou_content_border);
     padding: 0;
     margin: 0;
 }
 
-.outer_box .corner_lt {
+.tou_containment .tou_corner_lt {
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 1;
     grid-row-end: 1;
  }
- .outer_box .corner_rt {
+ .tou_containment .tou_corner_rt {
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 1;
  }
 
- .outer_box .corner_lb {
+ .tou_containment .tou_corner_lb {
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 3;
     grid-row-end: 3;
  }
- .outer_box .corner_rb {
+ .tou_containment .tou_corner_rb {
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 3;
     grid-row-end: 3;
  }
 
-.border_t, .border_l, .border_r, .border_b {
-    outline: 1px solid orangered;
-    outline-offset: -1px;
+.tou_border_t, .tou_border_l, .tou_border_r, .tou_border_b {
+    /*outline: 1px solid orangered;
+    outline-offset: -1px;*/
+    background: var(--grey1);
     display: inline-grid;
     margin: 0;
     padding: 0;
 }
 
-.border_t, .border_b {
-    height: 7px; 
+.tou_border_t, .tou_border_b {
+    height: var(--tou_content_border);
     width: 100%;
 }
 
-.border_l, .border_r {
+.tou_border_l, .tou_border_r {
     height: 100%;
-    width: 7px;
+    width: var(--tou_content_border);
 }
 
 /*cursors for clearer intent*/
-.corner_lt{ cursor: nw-resize;}
-.corner_rt{ cursor: ne-resize;}
-.corner_lb{ cursor: sw-resize;}
-.corner_rb{ cursor: se-resize;}
-.border_t { cursor: n-resize; }
-.border_b { cursor: s-resize; }
-.border_l { cursor: w-resize; }
-.border_r { cursor: e-resize; }
+.tou_corner_lt{ cursor: nw-resize;}
+.tou_corner_rt{ cursor: ne-resize;}
+.tou_corner_lb{ cursor: sw-resize;}
+.tou_corner_rb{ cursor: se-resize;}
+.tou_border_t { cursor: n-resize; }
+.tou_border_b { cursor: s-resize; }
+.tou_border_l { cursor: w-resize; }
+.tou_border_r { cursor: e-resize; }
 
-.outer_box .border_t {
+.tou_containment .tou_border_t {
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 1;
     grid-row-end: 1;
 }
 
-.outer_box .border_l {
+.tou_containment .tou_border_l {
     grid-column-start: 1;
     grid-column-end: 1;
     grid-row-start: 2;
     grid-row-end: 2;
 }
 
-.outer_box .border_r {
+.tou_containment .tou_border_r {
     grid-column-start: 3;
     grid-column-end: 3;
     grid-row-start: 2;
     grid-row-end: 2;
 }
 
-.outer_box .border_b {
+.tou_containment .tou_border_b {
     grid-column-start: 2;
     grid-column-end: 2;
     grid-row-start: 3;
